Minor changs made

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "homepage": "https://umer6921.github.io/TextUtili",
+  
   "name": "react-mui",
+  "homepage": "https://umer6921.github.io/textutili.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
