--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "react-mui",
   "homepage": "https://umer6921.github.io/textutili",
   "version": "0.1.0",
-  "private": false,
+  "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
